<resources>
    <string name="app_name">RowReduction</string>
    <string name="del">DEL</string>
    <string name="PlusMinus">+/-</string>
    <string name="XVariable">x</string>
    <string name="YVariable">y</string>
    <string name="ZVariable">z</string>
    <string name="Equals">=</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Plus">+</string>
    <string name="SetupMatrixButton">Setup Augmented Matrix</string>
    
    // Hints - Swap Rows
    <string name="swap_1">You want the pivot element to have a 1. Consider swapping the pivot row with another.</string>
    <string name="swap_2">To get a 1 in the pivot element, swap Row %1$s with Row %2$s</string>
    <string name="swap_3">Use the following operation:</string>

    // Hints - Multiply by constant
    <string name="mult_by_constant_1">You want the pivot element to have a 1. Consider multiplying the pivot row by the pivot element\'s reciprocal.</string>
    <string name="mult_by_constant_2">To get a 1 in the pivot element, multiply Row %1$s by %2$s</string>
    <string name="mult_by_constant_3">Use the following operation:</string>

    // Hints - Row Plus constant row
    <string name="operation3_1">Now that you have a 1 in the pivot column, you must make the rest of the column 0s</string>
    <string name="operation3_2">To make the number in Row %1$s Column %2$s a 0, think about what number is needed so %3$s + ? = 0</string>
    <string name="operation3_3">Use the following operation:</string>
    
</resources>