<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20pt"
        android:layout_marginTop="20pt"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                style="@style/Coefficient"
                android:id="@+id/coefficientX1"
                android:background="@drawable/my_border"/>

            <TextView
                style="@style/Variable"
                android:id="@+id/equation1X"
                android:text="@string/XVariable" />

            <TextView
                style="@style/Operator"
                android:id="@+id/equation11Plus"
                android:text="@string/Plus" />

            <TextView
                style="@style/Coefficient"
                android:id="@+id/coefficientY1" />

            <TextView
                style="@style/Variable"
                android:id="@+id/equation1Y"
                android:text="@string/YVariable"/>

            <TextView
                style="@style/Operator"
                android:id="@+id/equation12Plus"
                android:text="@string/Plus" />

            <TextView
                style="@style/Coefficient"
                android:id="@+id/coefficientZ1" />

            <TextView
                style="@style/Variable"
                android:id="@+id/equation1Z"
                android:text="@string/ZVariable" />

            <TextView
                style="@style/Operator"
                android:id="@+id/equation1Equals"
                android:text="@string/Equals" />

            <TextView
                style="@style/Coefficient"
                android:id="@+id/coefficientC1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
>

            <TextView
                style="@style/Coefficient"
                android:id="@+id/coefficientX2"
                android:textSize="24sp" />

            <TextView
                style="@style/Variable"
                android:id="@+id/equation2X"
                android:text="@string/XVariable" />

            <TextView
                style="@style/Operator"
                android:id="@+id/equation21Plus"
                android:text="@string/Plus" />

            <TextView
                style="@style/Coefficient"
                android:id="@+id/coefficientY2"/>

            <TextView
                style="@style/Variable"
                android:id="@+id/equation2Y"
                android:text="@string/YVariable"/>

            <TextView
                style="@style/Operator"
                android:id="@+id/equation22Plus"
                android:text="@string/Plus"/>

            <TextView
                style="@style/Coefficient"
                android:id="@+id/coefficientZ2"
                android:textSize="24sp" />

            <TextView
                style="@style/Variable"
                android:id="@+id/equation2Z"
                android:text="@string/ZVariable" />

            <TextView
                style="@style/Operator"
                android:id="@+id/equation2Equals"
                android:text="@string/Equals" />

            <TextView
                style="@style/Coefficient"
                android:id="@+id/coefficientC2"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="@style/Coefficient"
                android:id="@+id/coefficientX3" />

            <TextView
                style="@style/Variable"
                android:id="@+id/equation3X"
                android:text="@string/XVariable"/>

            <TextView
                style="@style/Operator"
                android:id="@+id/equation31Plus"
                android:text="@string/Plus" />

            <TextView
                style="@style/Coefficient"
                android:id="@+id/coefficientY3" />

            <TextView
                style="@style/Variable"
                android:id="@+id/equation3Y"
                android:text="@string/YVariable" />

            <TextView
                style="@style/Operator"
                android:id="@+id/equation32Plus"
                android:text="@string/Plus" />

            <TextView
                style="@style/Coefficient"
                android:id="@+id/coefficientZ3" />

            <TextView
                style="@style/Variable"
                android:id="@+id/equation3Z"
                android:text="@string/ZVariable" />

            <TextView
                style="@style/Operator"
                android:id="@+id/equation3Equals"
                android:text="@string/Equals" />

            <TextView
                style="@style/Coefficient"
                android:id="@+id/coefficientC3" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center|center_horizontal"
        android:padding="6dp"
        android:weightSum="2">

        <Button
            android:id="@+id/setupMatrix"
            android:layout_width="wrap_content"
            android:layout_height="30pt"
            android:layout_weight="0.5"
            android:text="@string/SetupMatrixButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView

        android:layout_width="0dp"
        android:layout_height="10pt"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/black"
        android:textSize="24sp" />

    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0pt"
            android:layout_marginTop="0pt"
            >

            <Button
                style="@style/NumberButton"
                android:id="@+id/button7"
                android:text="@string/_7"
                />

            <Button
                style="@style/NumberButton"
                android:id="@+id/button8"
                android:text="@string/_8"
                />

            <Button
                style="@style/NumberButton"
                android:id="@+id/button9"
                android:text="@string/_9"
                />

            <Button
                style="@style/EquationVariable"
                android:id="@+id/buttonDEL"
                android:text="@string/del"
                />


            <ImageButton
                android:id="@+id/buttonLeft"
                style="@style/EquationVariable"
                android:src="@drawable/left_arrow"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <Button
                style="@style/NumberButton"
                android:id="@+id/button4"
                android:text="@string/_4"
                />

            <Button
                style="@style/NumberButton"
                android:id="@+id/button5"
                android:text="@string/_5"
                />

            <Button
                style="@style/NumberButton"
                android:id="@+id/button6"
                android:text="@string/_6"
                />

            <Button
                style="@style/EquationVariable"
                android:id="@+id/buttonPlusMinus"
                android:text="@string/PlusMinus"
                />

            <ImageButton
                style="@style/EquationVariable"
                android:id="@+id/buttonRight"
                android:src="@drawable/right_arrow_white"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <Button
                style="@style/NumberButton"
                android:id="@+id/button1"
                android:text="@string/_1"
                />

            <Button
                style="@style/NumberButton"
                android:id="@+id/button2"
                android:text="@string/_2"
                />

            <Button
                style="@style/NumberButton"
                android:id="@+id/button3"
                android:text="@string/_3"
                />

            <Button
                style="@style/EquationVariable"
                android:id="@+id/buttonAddEqn"
                android:text="+E"
                />

            <Button
                style="@style/EquationVariable"
                android:id="@+id/buttonAddVar"
                android:text="+V"

                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <Button
                style="@style/NumberButton"
                android:id="@+id/buttonFrac"
                android:text="/"
                />

            <Button
                style="@style/NumberButton"
                android:id="@+id/button0"
                android:text="@string/_0"
                />

            <Button
                style="@style/NumberButton"
                android:id="@+id/buttonDot"
                android:text="."
                />

            <Button
                style="@style/EquationVariable"
                android:id="@+id/buttonSubEqn"
                android:text="-E"
                />

            <Button
                style="@style/EquationVariable"
                android:id="@+id/buttonSubVar"
                android:text="-V"
                />

        </TableRow>



    </TableLayout>
</LinearLayout>